Added a new service for calculator.

--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
@@ -4,3 +4,7 @@ services:
     arguments: ['@messenger']
     tags:
       - { name: event_subscriber }
+
+  verathon_bflex_calculator.calculator:
+    class: Drupal\verathon_bflex_calculator\Calculator
+    arguments: ['@config.factory']
