Adding new form changes.

--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
@@ -6,8 +6,8 @@ verathon_bflex_calculator:
     component:
       css/verathon-bflex-calculator.css: {}
   dependencies:
+    - core/jquery
     - core/drupalSettings
-    - verathon_bflex_calculator/jquery-labelauty
 
 # Third-party library (self hosted).
 jquery-labelauty:
