Adding the form for bflex calculator.

--- a/docroot/modules/custom/verathon_bflex_calculator/config/install/verathon_bflex_calculator.settings.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/config/install/verathon_bflex_calculator.settings.yml
@@ -23,3 +23,26 @@ hld_in_aer_factor_high: '17.21'
 dying_storage_factor_low: '1.88'
 dying_storage_factor_average: '4.17'
 dying_storage_factor_high: '6.45'
+
+result_section_copy: 'See the BFlex™ Bronchoscope Advantage'
+result_button_label: 'See Results'
+facility_name_label: 'Facility name'
+total_annual_bronchoscopy_procedures_label: 'Total annual bronchoscopy procedures'
+total_annual_bronchoscopy_procedures_helptext: 'Include billable bronchoscopies, as well as other procedures that utilize a bronchoscope (bronchoscopy-assisted intubations, double-lumen tube placements, etc.)'
+procedures_count_single_usage_label: 'Number of procedures that could be performed with single-use bronchoscopes'
+your_bronchoscope_price_label: 'Your BFlex™ bronchoscope price'
+your_bronchoscope_price_description: 'If you do not know the price leave this field blank.'
+your_bronchoscope_price_helptext: 'Contact sales for pricing.'
+step_one_result_string: 'Total number of reusable bronchoscopes'
+total_reusable_bronchoscopes_label: 'Annual cost of service agreement per bronchoscope'
+annual_service_cost_per_bronchoscope_label: 'Annual cost of service agreement per bronchoscope'
+annual_out_of_pocket_repair_cost_label: 'Annual out-of-pocket repair costs for all bronchoscopes'
+annual_out_of_pocket_repair_cost_helptext: 'Cost of repairs per use can range from $53 (low) to $148 (high). Annual out-of-pocket repair costs equal the cost of repairs per use multiplied by total annual procedures.'
+step_two_result_string: 'annual out-of-pocket repair costs'
+reprocessing_costs_label: 'Reprocessing costs'
+reprocessing_range_low_label: 'Low'
+reprocessing_range_average_label: 'Average'
+reprocessing_range_high_label: 'High'
+step_three_result_string: 'per procedure with reusable scopes'
+step_four_result_string: 'Estimated number of infections due to cross contamination:'
+step_four_final_cost_string: 'Estimated annual treatment cost:'
