--- a/docroot/composer.json
+++ b/docroot/composer.json
@@ -31,8 +31,8 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/core-vendor-hardening": "^9.1",
-        "drupal/entity_print": "^2.2"
-
+        "drupal/entity_print": "^2.2",
+        "drupal/asset_injector": "^2.7"
     },
     "conflict": {
         "drupal/drupal": "*"
