Adding changes to the new modules.

--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
@@ -6,6 +6,7 @@ verathon_bflex_calculator:
     component:
       css/verathon-bflex-calculator.css: {}
   dependencies:
+    - core/drupal
     - core/jquery
     - core/drupalSettings
 
