--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.libraries.yml
@@ -6,9 +6,11 @@ verathon_bflex_calculator:
     component:
       css/verathon-bflex-calculator.css: {}
   dependencies:
-    - core/drupal
     - core/jquery
+    - core/drupal.ajax
+    - core/drupal
     - core/drupalSettings
+    - core/jquery.once
 
 # Third-party library (self hosted).
 jquery-labelauty:
