--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
@@ -8,3 +8,8 @@ services:
   verathon_bflex_calculator.calculator:
     class: Drupal\verathon_bflex_calculator\Calculator
     arguments: ['@config.factory']
+
+  verathon_bflex_calculator.twig_extender:
+    class: Drupal\verathon_bflex_calculator\TwigExtension\TwigCustomExtension
+    tags:
+      - { name: twig.extension }
