--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.menu.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.menu.yml
@@ -1,13 +1,20 @@
 verathon_bflex_calculator.settings_form:
-  title: Verathon Bflex Calculator
-  description: Configure Verathon Bflex Calculator.
+  title: Calculation Factors
+  description: Manage Bflex calculation factors.
   parent: system.admin_config_system
   route_name: verathon_bflex_calculator.settings_form
   weight: 10
 
 verathon_bflex_calculator.bflex_calculator_content:
-  title: Manage BFlex Calculator Content
+  title: Calculator - Labels
   description: Configure the BFlex Calculator form&#039;s labels and error messages.
   parent: system.admin_config_system
   route_name: verathon_bflex_calculator.bflex_calculator_content
+  weight: 10
+
+verathon_bflex_calculator.bflex_calculator_result_content:
+  title: Calculator Result - Labels
+  description: Manage strings and labels on Bflex Calculator Results Page.
+  parent: verathon_bflex_calculator.settings_form
+  route_name: verathon_bflex_calculator.bflex_calculator_result_content
   weight: 10
