--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.routing.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.routing.yml
@@ -1,11 +1,3 @@
-verathon_bflex_calculator.example:
-  path: '/verathon-bflex-calculator/example'
-  defaults:
-    _title: 'Example'
-    _controller: '\Drupal\verathon_bflex_calculator\Controller\VerathonBflexCalculatorController::build'
-  requirements:
-    _permission: 'access content'
-
 verathon_bflex_calculator.settings_form:
   path: '/admin/config/system/verathon-bflex-calculator'
   defaults:
@@ -13,38 +5,6 @@ verathon_bflex_calculator.settings_form:
     _form: 'Drupal\verathon_bflex_calculator\Form\SettingsForm'
   requirements:
     _permission: 'administer verathon_bflex_calculator configuration'
-
-verathon_bflex_calculator.bronchoscope_usage:
-  path: '/verathon-bflex-calculator/bronchoscope-usage'
-  defaults:
-    _title: 'Bronchoscope usage'
-    _form: 'Drupal\verathon_bflex_calculator\Form\BronchoscopeUsageForm'
-  requirements:
-    _permission: 'access content'
-
-verathon_bflex_calculator.repair_and_maintenance:
-  path: '/verathon-bflex-calculator/repair-and-maintenance'
-  defaults:
-    _title: 'Repair and maintenance'
-    _form: 'Drupal\verathon_bflex_calculator\Form\RepairAndMaintenanceForm'
-  requirements:
-    _permission: 'access content'
-
-verathon_bflex_calculator.hidden_reprocessing_costs:
-  path: '/verathon-bflex-calculator/hidden-reprocessing-costs'
-  defaults:
-    _title: 'Hidden reprocessing costs'
-    _form: 'Drupal\verathon_bflex_calculator\Form\HiddenReprocessingCosts'
-  requirements:
-    _permission: 'access content'
-
-verathon_bflex_calculator.preventable_infections:
-  path: '/verathon-bflex-calculator/preventable-infections'
-  defaults:
-    _title: 'Preventable infections'
-    _form: 'Drupal\verathon_bflex_calculator\Form\PreventableInfections'
-  requirements:
-    _permission: 'access content'
 
 verathon_bflex_calculator.verathon_bflex_calculator:
   path: '/bflex-calculator'
@@ -57,10 +17,18 @@ verathon_bflex_calculator.verathon_bflex_calculator:
 verathon_bflex_calculator.bflex_calculator_content:
   path: '/admin/config/system/bflex-calculator-content'
   defaults:
-    _title: 'Bflex calculator content'
+    _title: 'Calculator - Labels'
     _form: 'Drupal\verathon_bflex_calculator\Form\BflexCalculatorContentForm'
   requirements:
     _permission: 'administer bflex content'
+
+verathon_bflex_calculator.bflex_calculator_result_content:
+  path: '/admin/config/system/bflex-calculator-result-content'
+  defaults:
+    _title: 'Result Page - Labels'
+    _form: 'Drupal\verathon_bflex_calculator\Form\CalculatorResultContentForm'
+  requirements:
+    _permission: 'administer site configuration'
 
 calculator.result:
   path: '/bflex-calculator/result'
@@ -69,3 +37,5 @@ calculator.result:
     _controller: '\Drupal\verathon_bflex_calculator\Controller\VerathonBflexCalculatorResultController::build'
   requirements:
     _permission: 'access content'
+
+
