--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.menu.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.menu.yml
@@ -1,5 +1,5 @@
 verathon_bflex_calculator.settings_form:
-  title: Calculation Factors
+  title: BFlex Configurations
   description: Manage Bflex calculation factors.
   parent: system.admin_config_system
   route_name: verathon_bflex_calculator.settings_form
@@ -8,7 +8,7 @@ verathon_bflex_calculator.settings_form:
 verathon_bflex_calculator.bflex_calculator_content:
   title: Calculator - Labels
   description: Configure the BFlex Calculator form&#039;s labels and error messages.
-  parent: system.admin_config_system
+  parent: verathon_bflex_calculator.settings_form
   route_name: verathon_bflex_calculator.bflex_calculator_content
   weight: 10
 
