--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.task.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.links.task.yml
@@ -10,8 +10,8 @@ verathon_bflex_calculator.bflex_calculator_content:
   weight: 2
   base_route: verathon_bflex_calculator.settings_form
 
-verathon_bflex_calculator.bflex_calculator_result_content:
-  title: Calculator Results - Labels
-  route_name: verathon_bflex_calculator.bflex_calculator_result_content
+verathon_bflex_calculator.bflex_result_content:
+  title: Calculator Result - Labels
+  route_name: verathon_bflex_calculator.bflex_result_content
   weight: 3
   base_route: verathon_bflex_calculator.settings_form
