--- a/docroot/composer.json
+++ b/docroot/composer.json
@@ -34,7 +34,8 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/core-vendor-hardening": "^9.1",
-        "drupal/menu_item_extras": "^2.15"
+        "drupal/menu_item_extras": "^2.15",
+        "tecnickcom/tcpdf": "*"
     },
     "conflict": {
         "drupal/drupal": "*"
