--- a/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/verathon_bflex_calculator.services.yml
@@ -8,3 +8,6 @@ services:
     class: Drupal\verathon_bflex_calculator\TwigExtension\TwigCustomExtension
     tags:
       - { name: twig.extension }
+
+  verathon_bflex_calculator.pdf_generator:
+    class: Drupal\verathon_bflex_calculator\PdfGenerator
