--- a/docroot/composer.json
+++ b/docroot/composer.json
@@ -25,9 +25,9 @@
     "require": {
         "ext-dom": "*",
         "acquia/acquia_cms": "1.1",
+        "cloudconvert/cloudconvert-php": "^3.2",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "dompdf/dompdf": "0.8.5",
         "drupal/asset_injector": "^2.7",
         "drupal/better_exposed_filters": "^5.0",
         "drupal/core-composer-scaffold": "^9.1",
