Fixed content on templates.

--- a/docroot/modules/custom/verathon_bflex_calculator/config/install/verathon_bflex_calculator.settings.yml
+++ b/docroot/modules/custom/verathon_bflex_calculator/config/install/verathon_bflex_calculator.settings.yml
@@ -81,3 +81,62 @@ facility_name_error_text:
 total_reusable_bronchoscopes_error_text:
   value: "<p>This value must be less than or equal to the total annual bronchoscopy procedures.</p>\r\n"
   format: cohesion
+result_page_heading: 'Your Cost-Comparison Results'
+result_page_footer: 'Single-Use. Safer Investment.'
+result_current_main_heading: 'Current operating costs'
+result_current_sub_heading: 'Using reusable bronchoscopes only'
+result_current_grand_total_label: 'Annual Estimated Operating Costs'
+result_current_bronchoscope_heading: 'Current bronchoscope usage'
+result_current_single_usage_count_label: 'Single-use BFlex bronchoscopes'
+result_current_bronchoscope_cost_label: 'Annual cost'
+result_current_repair_maintenance_heading: 'Repair and maintenance costs'
+result_current_reusable_bronchoscope_usage_label: 'Reusable bronchoscopes (QTY)'
+result_current_annual_cost_of_service_label: 'Annual cost of service agreement per reusable bronchoscope'
+result_current_annual_oop_cost_of_service_label: 'Annual out-of-pocket repair costs for all reusable bronchoscopes'
+result_current_reprocessing_costs_heading: 'Reprocessing costs per use'
+result_current_reprocessing_cost_left_column_heading: 'Reprocessing costs'
+result_current_reprocessing_cost_right_column_heading: Average
+result_current_ppe_label: 'PPE for personnel'
+result_current_bedside_precleaning_label: 'Bedside precleaning'
+result_current_leak_testing_label: 'Leak testing'
+result_current_manual_cleaning_label: 'Manual cleaning'
+result_current_visual_inspection_label: 'Visual inspection'
+result_current_hld_in_aer_label: 'HLD in an AER'
+result_current_dying_storage_label: 'Drying and storage'
+result_current_reprocessing_costs_label: 'Annual cost'
+result_current_preventable_infections_heading: 'Preventable infections'
+result_current_preventable_infections_patient_infections_label: 'Patient infections due to cross contamination'
+result_current_cost_per_infection_label: 'Cost per infection'
+result_current_preventable_infections_costs_label: 'Annual Cost'
+result_with_main_heading: 'With BFlex'
+result_with_sub_heading: 'Combined with existing reusable bronchoscope inventory'
+result_with_grand_total_label: 'Annual Estimated Operating Costs'
+result_with_bronchoscope_heading: 'Current bronchoscope usage'
+result_with_single_usage_count_label: 'Single-use BFlex bronchoscopes'
+result_with_bronchoscope_cost_label: 'Annual cost'
+result_with_repair_maintenance_heading: 'Repair and maintenance costs'
+result_with_reusable_bronchoscope_usage_label: 'Reusable bronchoscopes (QTY)'
+result_with_annual_cost_of_service_label: 'Annual cost of service agreement per reusable bronchoscope'
+result_with_annual_oop_cost_of_service_label: 'Annual out-of-pocket repair costs for all reusable bronchoscopes'
+result_with_reprocessing_costs_heading: 'Reprocessing costs per use'
+result_with_reprocessing_cost_left_column_heading: 'Reprocessing costs'
+result_with_reprocessing_cost_right_column_heading: Average
+result_with_ppe_label: 'PPE for personnel'
+result_with_bedside_precleaning_label: 'Bedside precleaning'
+result_with_leak_testing_label: 'Leak testing'
+result_with_manual_cleaning_label: 'Manual Cleaning'
+result_with_visual_inspection_label: 'Visual Inspection'
+result_with_hld_in_aer_label: 'HLD in an AER'
+result_with_dying_storage_label: 'Dying and Storage'
+result_with_reprocessing_costs_label: 'Annual Cost'
+result_with_preventable_infections_heading: 'Preventable infections'
+result_with_preventable_infections_patient_infections_label: 'Patient infections due to cross contamination'
+result_with_cost_per_infection_label: 'Cost per infection'
+result_with_preventable_infections_costs_label: 'Annual Cost'
+result_page_description:
+  value: "<p>Here’s how your current costs for reusables stack up against sterile single-use bronchoscopes. By integrating BFlex™ with your inventory, you can help to reduce preventable infections from cross contamination and save time on repairs and reprocessing. <span class=\"boldText\">This comparison is conservative. It omits the capital acquisition costs and operational budgets associated with reusable bronchoscopes.</span></p>\r\n"
+  format: cohesion
+result_current_repair_maintenance_costs_label: 'Annual Cost'
+result_with_repair_maintenance_costs_label: 'Annual Cost'
+scroll_text: 'Scroll to get started'
+download_button_text: 'Generate Custom Report'
