--- a/config/sync/editor.editor.script_format.yml
+++ b/config/sync/editor.editor.script_format.yml
@@ -21,6 +21,7 @@ settings:
         -
           name: Format
           items:
+            - Styles
             - Format
         -
           name: Source
