--- a/config/sync/editor.editor.script_format.yml
+++ b/config/sync/editor.editor.script_format.yml
@@ -27,6 +27,7 @@ settings:
           name: Source
           items:
             - Source
+            - DX8InlineStyles
   plugins:
     language:
       language_list: un
