--- a/config/sync/core.entity_form_display.node.product_documentation.default.yml
+++ b/config/sync/core.entity_form_display.node.product_documentation.default.yml
@@ -5,10 +5,15 @@ dependencies:
   config:
     - field.field.node.product_documentation.body
     - field.field.node.product_documentation.field_document
+    - field.field.node.product_documentation.field_document_format
+    - field.field.node.product_documentation.field_event_published_on
+    - field.field.node.product_documentation.field_final_doc
     - field.field.node.product_documentation.field_language
+    - field.field.node.product_documentation.field_market
     - field.field.node.product_documentation.field_media
     - node.type.product_documentation
   module:
+    - datetime
     - inline_entity_form
     - media_library
     - text
@@ -33,6 +38,26 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_document_format:
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
+  field_event_published_on:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_final_doc:
+    weight: 28
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_language:
     weight: 16
     settings:
@@ -49,6 +74,12 @@ content:
       allow_duplicate: false
     third_party_settings: {  }
     type: inline_entity_form_complex
+    region: content
+  field_market:
+    weight: 29
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_media:
     weight: 26
