--- a/config/sync/core.entity_view_display.node.product.default.yml
+++ b/config/sync/core.entity_view_display.node.product.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.product.body
     - field.field.node.product.field_image
     - field.field.node.product.field_layout_canvas
+    - field.field.node.product.field_local_sales_representative
     - field.field.node.product.field_media
     - field.field.node.product.field_no_longer_supported
     - field.field.node.product.field_product_documentation
@@ -35,6 +36,14 @@ content:
       link: false
     third_party_settings: {  }
     type: cohesion_entity_reference_revisions_entity_view
+    region: content
+  field_local_sales_representative:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_media:
     type: entity_reference_entity_view
