--- a/config/sync/core.entity_view_display.node.product_documentation.default.yml
+++ b/config/sync/core.entity_view_display.node.product_documentation.default.yml
@@ -5,10 +5,16 @@ dependencies:
   config:
     - field.field.node.product_documentation.body
     - field.field.node.product_documentation.field_document
+    - field.field.node.product_documentation.field_document_format
+    - field.field.node.product_documentation.field_event_published_on
+    - field.field.node.product_documentation.field_final_doc
     - field.field.node.product_documentation.field_language
+    - field.field.node.product_documentation.field_market
     - field.field.node.product_documentation.field_media
     - node.type.product_documentation
   module:
+    - datetime
+    - options
     - text
     - user
 id: node.product_documentation.default
@@ -31,6 +37,30 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_document_format:
+    weight: 110
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_event_published_on:
+    weight: 107
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_final_doc:
+    weight: 108
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_language:
     weight: 102
     label: hidden
@@ -38,6 +68,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_market:
+    weight: 109
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_media:
     weight: 106
