--- a/config/sync/cohesion_templates.cohesion_content_templates.taxonomy_term_news_type_global_s.yml
+++ b/config/sync/cohesion_templates.cohesion_content_templates.taxonomy_term_news_type_global_s.yml
@@ -1,9 +1,9 @@
-uuid: 1e81b243-b319-45f7-ac0e-933b01d2a46c
+uuid: f57e3eda-4d9a-455f-b75e-bd0fa1e68f65
 langcode: en
 status: false
 dependencies: {  }
-id: taxonomy_term_country_token
-label: 'Token (Taxonomy_term, Country)'
+id: taxonomy_term_news_type_global_s
+label: 'Global Support Search (Taxonomy_term, News Type)'
 json_values: '{"canvas":[],"mapper":null,"model":[]}'
 json_mapper: '{}'
 last_entity_update: entityupdate_0029
@@ -13,6 +13,6 @@ custom: false
 twig_template: null
 default: false
 entity_type: taxonomy_term
-bundle: country
-view_mode: token
+bundle: news_type
+view_mode: global_support_search
 master_template: ''
