--- a/config/sync/h5p.settings.yml
+++ b/config/sync/h5p.settings.yml
@@ -14,6 +14,6 @@ h5p_hub_is_enabled: 1
 h5p_send_usage_statistics: 1
 _core:
   default_config_hash: DOpafOAgbupgYde46Xnp8cO65DpNu6-W_rlKENRSEtM
-h5p_site_type: network
+h5p_site_type: internet
 h5p_site_uuid: 7bde50d3-aa4b-4a84-b0a8-b3e51df53ef3
 h5p_first_runnable_saved: 1
