--- a/config/sync/cohesion_templates.cohesion_content_templates.node_nithish_harsh_horizontal_ca.yml
+++ b/config/sync/cohesion_templates.cohesion_content_templates.node_nithish_harsh_horizontal_ca.yml
@@ -1,9 +1,9 @@
-uuid: 90469425-8fb6-47c4-8a59-48a87c2fae3a
+uuid: 859ef692-e40a-44cb-a4da-18779bed9ff2
 langcode: en
 status: false
 dependencies: {  }
-id: taxonomy_term_country_global_sup
-label: 'Global Support Search (Taxonomy_term, Country)'
+id: node_nithish_harsh_horizontal_ca
+label: 'Horizontal card (Node, Nithish & Harsh)'
 json_values: '{"canvas":[],"mapper":null,"model":[]}'
 json_mapper: '{}'
 last_entity_update: entityupdate_0029
@@ -12,7 +12,7 @@ selectable: false
 custom: false
 twig_template: null
 default: false
-entity_type: taxonomy_term
-bundle: country
-view_mode: global_support_search
+entity_type: node
+bundle: nithish_harsh
+view_mode: horizontal_card
 master_template: ''
