--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,12 +5,12 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_categories
+    - field.field.node.page.field_is_product
     - field.field.node.page.field_layout_canvas
     - field.field.node.page.field_metatag
     - field.field.node.page.field_page_image
     - field.field.node.page.field_tags
     - node.type.page
-    - workflows.workflow.editorial
   module:
     - cohesion_elements
     - content_moderation
@@ -66,6 +66,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_is_product:
+    weight: 32
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_layout_canvas:
     type: cohesion_layout_builder_widget
     weight: 2
